Fix filter overflow issue

--- a/public/style/plugin.css
+++ b/public/style/plugin.css
@@ -327,6 +327,8 @@
   border-radius: 0px;
   color: #000;
   font-size: 13px;
+  max-height: 70vh;
+  overflow-y: auto;
 }
 #nb-app-wrapper .filter-options-wrapper .filter-options .title {
   color: #444;
